# ahc019

./: .dockerignore  .gitignore  AxisMap.ipynb  Cargo.toml  Dockerfile  Pipfile  README.md  common.py  dump_best.py  opt.db  run_many.py  run_opt.py  seeds.txt
cdk/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
input/10/: 0000.txt  0001.txt  0002.txt
input/11/: 0000.txt  0001.txt  0002.txt
input/12/: 0000.txt  0001.txt  0002.txt
input/13/: 0000.txt  0001.txt  0002.txt
input/14/: 0000.txt  0001.txt  0002.txt
input/5/: 0000.txt  0001.txt  0002.txt
input/6/: 0000.txt  0001.txt  0002.txt
input/7/: 0000.txt  0001.txt  0002.txt
input/8/: 0000.txt  0001.txt  0002.txt
input/9/: 0000.txt  0001.txt  0002.txt
src/: block_set.rs  brute_force.rs  grid.rs  lib.rs  main.rs  mc.rs  solver.rs
tools/: Cargo.toml
tools/src/: lib.rs
