[workspace]
members = [
    ".",
    "tools",
]

[package]
name = "ahc019"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "=0.7.3", features = ["small_rng"] }
getrandom = "=0.1.14"
rand_pcg = "=0.2.1"
rand_distr = "=0.2.2"
proconio = { version = "=0.3.8", features = ["derive"] }
rustc-hash = "=1.1.0"
smallvec = "=1.2.0"

serde = "1.0"
tokio = { version = "1", features = ["macros"] }
lambda_runtime = "0.7.3"

tools = { path = "./tools" }

#num = "=0.2.1"
#num-bigint = "=0.2.6"
#num-complex = "=0.2.4"
#num-integer = "=0.1.42"
#num-iter = "=0.1.40"
#num-rational = "=0.2.4"
#num-traits = "=0.2.11"
#num-derive = "=0.3.0"
#ndarray = "=0.13.0"
#nalgebra = "=0.20.0"
